--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -114,7 +114,9 @@ a {
   font-weight: normal;
   color: #159957; }
 .main-content p {
-  margin-bottom: 1em; }
+  margin-bottom: 1em; 
+  word-break: break-word;
+}
 .main-content code {
   padding: 2px 4px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
