--- a/slidePage.css
+++ b/slidePage.css
@@ -23,6 +23,6 @@
   -webkit-transform: translate3d(0,100%,0);
 }
 .slide-container .slide-page.transition {
-  transition: all 700ms cubic-bezier(0.550, 0.085, 0.000, 0.990);
-  -webkit-transition: all 700ms cubic-bezier(0.550, 0.085, 0.000, 0.990);
+  transition: transform 700ms cubic-bezier(0.550, 0.085, 0.000, 0.990);
+  -webkit-transition: transform 700ms cubic-bezier(0.550, 0.085, 0.000, 0.990);
 }
